--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -20,7 +20,7 @@
 
      
       
-      <a-entity id="cameraRig" position="0 0 0">
+      <a-entity id="cameraRig" position="0 0 0" rotation="0 0 0">
           <!-- Camera. -->
           <a-entity position="0 1 0" rotation="0 0 0" id="head" camera wasd-controls look-controls></a-entity>
 	      
